# gitflow-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  _typos.toml  cliff.toml  deny.toml  indonesia-b2b-independent-site-plan.md  indonesia-b2b-project-proposal.md  plan-issue-59.md  release.toml
.claude/: settings.json
.github/workflows/: build.yml  cd.yml  ci.yml  e2e-tests.yml  release.yml  smoke-test.yml
.superpowers/sdd/: final-fix-report.md  progress-refactor.md  progress.md  review-00e41fc..908f4fe.diff  review-0a15b70..fd352c0.diff  review-0b33fec..e6cc606.diff  review-0ba11cb..9024318.diff  review-108a85e..ff7d780.diff  review-1362f6f..0ba11cb.diff  review-2b3ad66..b1be00b.diff  review-2c29cfb..d9cae88.diff  review-327a255..32a6bb7.diff  review-327a255..8b5b390.diff  review-336048f..78df1b9.diff  review-341ba82..3da4305.diff  review-341ba82..3f8fb28.diff  review-3da4305..6ace057.diff  review-3e58f86..652ab76.diff  review-491810d..7b3a9a6.diff  review-652ab76..cf6a67f.diff  review-6709c84..32a6bb7.diff  review-6ace057..6efa953.diff  review-6ace057..80d90ff.diff  review-78df1b9..de40bca.diff  review-7b3a9a6..336048f.diff  review-80d90ff..0b6b5b8.diff  review-80d90ff..8fdbacb.diff  review-86af0e4..3e58f86.diff  review-86af0e4..a3744f7.diff  review-8b5b390..2c29cfb.diff  review-8fdbacb..a3744f7.diff  review-9024318..dcf645d.diff  review-92ace82..e0d32b2.diff  review-b1be00b..491810d.diff  review-b25f4cd..108a85e.diff  review-bc39f98..4ef75be.diff  review-cbaa58e..1362f6f.diff  review-cf6a67f..341ba82.diff  review-cf6a67f..d036afa.diff  review-d0b0d26..0a15b70.diff  (+103 more)
HomebrewFormula/: gitflow-cli.rb
apps/cli/: Cargo.toml  README.md  build.rs
apps/cli/hooks/: sync-readme-check.sh
apps/cli/src/: config.rs  error_reporter.rs  main.rs
apps/cli/src/commands/: auth.rs  commit.rs  completions.rs  issue.rs  label.rs  mod.rs  output.rs  pipeline.rs  pr.rs  prerequisites.rs  release.rs  review.rs  run.rs  skills.rs  workflow.rs
apps/cli/tests/: completions_test.rs  integration_test.rs  issue_test.rs  json_output_test.rs  pr_test.rs  toon_output_test.rs  workflow_modes_test.rs  workflow_phase1_test.rs  workflow_phase2_test.rs  workflow_phase3_phase4_test.rs
apps/cli/tests/cmd/: help.trycmd  version.trycmd
apps/cli/tests/common/: mod.rs
completions/: _gitflow-cli  gitflow-cli.bash  gitflow-cli.fish
crates/core/: Cargo.toml  README.md
crates/core/benches/: config_bench.rs
crates/core/examples/: config_demo.rs
crates/core/src/: auth.rs  auth_checker.rs  commit.rs  issue.rs  label.rs  lib.rs  output.rs  pipeline.rs  platform.rs  pr.rs  release.rs  review.rs  toon.rs  types.rs
crates/core/tests/: integration_test.rs
crates/e2e-core/: Cargo.toml
crates/e2e-github/: Cargo.toml
crates/gitcode/: Cargo.toml  README.md
crates/gitcode/src/: auth.rs  commit.rs  error.rs  issue.rs  label.rs  lib.rs  pipeline.rs  pr.rs  release.rs  review.rs  runner.rs
crates/github/: Cargo.toml  README.md
crates/github/src/: auth.rs  commit.rs  error.rs  issue.rs  label.rs  lib.rs  pipeline.rs  pr.rs  release.rs  review.rs  runner.rs
crates/gitlab/: Cargo.toml  README.md
crates/gitlab/src/: auth.rs  commit.rs  error.rs  issue.rs  label.rs  lib.rs  mr.rs  pipeline.rs  release.rs  review.rs  runner.rs
docs/: architecture.md  cli-patterns.md  code-review-report-2026-07-09.md  config.md  e2e-test-setup-guide.md  gitflow-workflow-guide.md  index.md  integration-guide.md  issue-triage-report-2026-07-09.md  pipeline-analysis-report-2026-07-09.md  pre-commit-usage.md  release-workflow.md  resume-refactor.sh  shell-completions.md  test-report-gitflow-cli-full-test-2026-07-08.md
docs/references/: gitflow-autoreport-bug-params.md  gitflow-label-milestone-params.md  gitflow-label-stats-taxonomy.md  gitflow-pipeline-analyzer-params.md  gitflow-pr-params.md  gitflow-precommit-hook-template.md  gitflow-precommit-params.md  gitflow-quality-params.md  gitflow-release-helper-params.md  pr-review-checklist.md
docs/research/: quality-report.md  skill-analysis-gitflow-auth.md  skill-analysis-gitflow-autoreport-bug.md  skill-analysis-gitflow-commit.md  skill-analysis-gitflow-issue-create.md  skill-analysis-gitflow-issue-review.md  skill-analysis-gitflow-issue-triage.md  skill-analysis-gitflow-issue.md  skill-analysis-gitflow-label-milestone.md  skill-analysis-gitflow-label-stats.md  skill-analysis-gitflow-pipeline-analyzer.md  skill-analysis-gitflow-pr-apply-feedback.md  skill-analysis-gitflow-pr-create.md  skill-analysis-gitflow-pr-inline-review.md  skill-analysis-gitflow-pr-review.md  skill-analysis-gitflow-pr.md  skill-analysis-gitflow-precommit.md  skill-analysis-gitflow-quality.md  skill-analysis-gitflow-regression.md  skill-analysis-gitflow-release-helper.md  skill-analysis-gitflow-release.md  skill-analysis-gitflow-repo-onboarding.md  skill-analysis-gitflow-repo.md  skill-analysis-gitflow-review.md  skill-analysis-gitflow-security-check.md  skill-analysis-gitflow-weekly-report.md  skill-analysis-gitflow-workflow.md  skills-refactor-analysis.md
docs/specs/: phase4-dogfooding-checklist.md
docs/superpowers/: workflow-skill-red-results.md
docs/templates/: pipeline-report.md  weekly-report-template.md  weekly-report.tmpl  workflow-phases-detail.md  workflow-plan.md
hooks/: auto-report-bug.sh  sync-readme-check.sh
scripts/: _common.sh  generate-completions.sh  init-ruflo-team.sh  install.sh  release-demo.sh  release.sh  smoke-test.sh
skills/: _common.sh
skills/gitflow-auth/: SKILL.md
skills/gitflow-autoreport-bug/: SKILL.md
skills/gitflow-commit/: SKILL.md
skills/gitflow-issue/: SKILL.md
skills/gitflow-issue-create/: SKILL.md
skills/gitflow-issue-review/: SKILL.md
skills/gitflow-issue-triage/: SKILL.md
skills/gitflow-label-milestone/: SKILL.md
skills/gitflow-label-stats/: SKILL.md
skills/gitflow-pipeline-analyzer/: SKILL.md
specs/: crates-io-publish-spec.md  gitflow-cli-design.md  index.md  release-workflow-improvements-spec.md  tui-system-monitor-design.md
(+85 files in other folders)
