[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "time", "signal", "process"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
miette = { version = "7", features = ["fancy"] }
dirs = "6"
toml = "0.8.23"
tempfile = "3"
is-terminal = "0.4"
which = "7"
regex = "1"

# CLI testing
assert_cmd = "2"
trycmd = "0.15"
predicates = "3"

# Uncomment when needed for your CLI tool:
# reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# indicatif = "0.17"
# console = "0.15"
# Security: uncomment when your CLI handles secrets, tokens, or passwords.
secrecy = "0.11"
# dotenvy = "0.15"
# self_update = "0.42"
# owo-colors = "4"

# workspace crates
gitflow-cli-core = { path = "crates/core" }
gitflow-cli-github = { path = "crates/github" }
gitflow-cli-gitlab = { path = "crates/gitlab" }
gitflow-cli-cli = { path = "apps/cli" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Hard blockers (matches CLAUDE.md non-negotiables)
todo = "deny"
dbg_macro = "deny"

# Production hygiene (promoted to error by CI's -D warnings)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unwrap_in_result = "warn"

# Documentation discipline
missing_errors_doc = "warn"
missing_panics_doc = "warn"
allow_attributes_without_reason = "warn"

# Pedantic group
pedantic = { level = "warn", priority = -1 }

# Cargo.toml hygiene
cargo = { level = "warn", priority = -1 }

# Security
indexing_slicing = "warn"

# Pedantic lints that are too noisy for this template
similar_names = "allow"
module_name_repetitions = "allow"
