[package]
name = "gitflow-cli-cli"
description = "Cross-platform Git engineering workflow orchestration tool"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
categories = ["development-tools", "command-line-utilities"]
keywords = ["gitflow", "git", "cli", "workflow"]

[[bin]]
name = "gitflow-cli"
path = "src/main.rs"

[dependencies]
gitflow-cli-core = { workspace = true }
gitflow-cli-github = { workspace = true }
gitflow-cli-gitlab = { workspace = true }
gitflow-cli-gitcode = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
dirs = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
is-terminal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
built = "0.7"

[dev-dependencies]
assert_cmd = { workspace = true }
trycmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
