[package]
name = "gitflow-cli-core"
description = """
Core library for gitflow-cli: domain types, error handling, and platform traits.
"""
categories = ["development-tools"]
keywords = ["gitflow", "git", "cli"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "config_bench"
harness = false

[lints]
workspace = true
