[package]
name = "gitflow-cli-core"
description = "Core domain types and traits for the gitflow-cli workspace"
categories = ["development-tools"]
keywords = ["gitflow", "git", "cli", "core", "workflow"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
toon-format.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "config_bench"
harness = false

[lints]
workspace = true
