[package]
name = "gitflow-cli-gitcode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GitCode platform implementation for gitflow-cli via gc CLI"
repository.workspace = true
readme = "../../README.md"
keywords = ["cli", "gitcode", "gitflow", "issue", "pr"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
gitflow-cli-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
